# vault-manager

./: README.md  conftest.py  pyproject.toml
src/vault_manager/: __init__.py  example_notegraph.ipynb  note_graph.py  pattern_extractor.py  playground.py
tests/: conftest.py  test_note.py  test_pattern_extractor.py
