[project]
name = "vault-manager"
version = "0.1.0"
description = "Organise, parse, and analyse a vault of markdown notes."
readme = "README.md"
authors = [
    { name = "ayahusseini", email = "aya.ahusseini@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "scipy>=1.16.3",
]

[project.scripts]
vault-manager = "vault_manager:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
